recursion.lessons.recursion.sierpinski.Sierpinski.scala.error
Sierpinski:8: error: value ∕ is not a member of Double
		sierpinski(level-1, length∕2)
                                          ^Sierpinski:9: error: value ∕ is not a member of Double
		avance(length∕2)
                             ^Sierpinski:10: error: value ∕ is not a member of Double
		sierpinski(level-1, length∕2)
                                          ^